@@ -1,3 +1,7 @@
+2005-02-08  Bruno Haible  <bruno@clisp.org>
+
+	* type.tst: Add some tests for SUBTYPEP and FUNCTION types.
+
 2005-02-05  Sam Steingold  <sds@gnu.org>
 
 	* bind.tst: always activate all SPECIAL declarations
